fix: Use default QuerySpec in asset update listener
Corrects the `OffersObserver.updated(Asset asset)` method to use
`contractDefinitionStore.findAll(QuerySpec.Builder.newInstance().build())`
when fetching all contract definitions.

This aligns the implementation with the intended design of using QuerySpec
consistently, even when no specific filters are applied at that stage.
The previous commit had inadvertently missed this specific line,
though other parts of the optimization plan were correctly implemented.

The corresponding unit test in `OffersObserverTest.java` has also been
updated to capture the QuerySpec and assert that it is a default,
unfiltered QuerySpec as expected.